// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/icons/Approved Customized 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 30.76923076923077,
      },
      undefined,
    ]
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    fill="none"
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {},
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    testID="warranty-icon-approve"
    vbHeight={24}
    vbWidth={24}
    width={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        Array [
          "fill",
        ]
      }
    >
      <RNSVGCircle
        cx={12}
        cy={12}
        fill={4286102069}
        propList={
          Array [
            "fill",
          ]
        }
        r={12}
      />
      <RNSVGPath
        d="M7.237 12.763l3.334 3.333 6.762-6.763"
        propList={
          Array [
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={4294967295}
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2.66667}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Storyshots components/icons/Approved Default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 30.76923076923077,
      },
      undefined,
    ]
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    fill="none"
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    testID="warranty-icon-approve"
    vbHeight={24}
    vbWidth={24}
    width={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        Array [
          "fill",
        ]
      }
    >
      <RNSVGCircle
        cx={12}
        cy={12}
        fill={4286102069}
        propList={
          Array [
            "fill",
          ]
        }
        r={12}
      />
      <RNSVGPath
        d="M7.237 12.763l3.334 3.333 6.762-6.763"
        propList={
          Array [
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={4294967295}
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2.66667}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
